# AgenticAI

./: .gitignore
CrewAI/ml_paper_analyzer/: README.md  pyproject.toml
CrewAI/ml_paper_analyzer/src/ml_paper_analyzer/: crew.py  main.py
CrewAI/ml_paper_analyzer/src/ml_paper_analyzer/config/: agents.yaml  tasks.yaml
No_Framework/Project1_IntroduceMe/: 01_BasicAgent.ipynb  02_BitAdvanced_Agent.ipynb  03_AnswerWithEvidence.ipynb  README.md  chunks.json  main.py  pyproject.toml  test.ipynb
