[project]
name = "project1-introduceme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.1",
    "ddgs>=9.10.0",
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "google-search-results>=2.4.2",
    "gradio>=6.2.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "openai>=2.14.0",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]
